--- a/services.html
+++ b/services.html
@@ -62,9 +62,7 @@
                 <div class="content-card h-100">
                     <h2 class="mb-3">Who I work with.</h2>
                     <p>
-                        I support individuals and professionals who feel a pull toward
-                        something more aligned — often during moments of transition,
-                        uncertainty, or quiet dissatisfaction.
+                        At noein, I support individuals and professionals who, like I once did, feel a pull toward something more aligned — a desire to reconnect with themselves, gain direction, and build confidence in the choices ahead.
                     </p>
                 </div>
             </div>
@@ -78,20 +76,9 @@
                         <li>Reconnecting with values and priorities</li>
                         <li>Building confidence in your own judgement</li>
                         <li>Navigating change or transition</li>
-                        <li>Understanding unhelpful thought patterns</li>
+                        <li>Understanding unhelpful thought and behaviour patterns</li>
                         <li>Creating more calm and alignment</li>
                     </ul>
-                </div>
-            </div>
-
-            <div class="col-lg-6">
-                <div class="content-card h-100">
-                    <h2 class="mb-3">My philosophy.</h2>
-                    <p>
-                        Coaching is an invitation to pause and notice what’s shaping
-                        your life beneath the surface. From this awareness, new
-                        choices and directions naturally emerge.
-                    </p>
                 </div>
             </div>
 
