--- a/services.html
+++ b/services.html
@@ -84,6 +84,17 @@
 
             <div class="col-lg-6">
                 <div class="content-card h-100">
+                    <h2 class="mb-3">My philosophy.</h2>
+                    <p>
+                        Coaching is an invitation to pause and notice what’s shaping
+                        your life beneath the surface. From this awareness, new
+                        choices and directions naturally emerge.
+                    </p>
+                </div>
+            </div>
+            
+            <div class="col-lg-6">
+                <div class="content-card h-100">
                     <h2 class="mb-3">My coaching style.</h2>
                     <p>
                         My approach is reflective, calm, and spacious. I meet you
