--- a/services.html
+++ b/services.html
@@ -97,9 +97,9 @@
                 <div class="content-card h-100">
                     <h2 class="mb-3">My coaching style.</h2>
                     <p>
-                        My approach is reflective, calm, and spacious. I meet you
-                        where you are, following your pace and what naturally arises
-                        in the space we create together.
+                        My approach is reflective, calm, and centred around awareness. I meet clients where they are, following their pace, their questions, and what naturally arises in the space we create together.
+
+When we understand the thoughts, patterns, and assumptions shaping our lives, we begin to act with greater clarity and intention.
                     </p>
                 </div>
             </div>
