--- a/services.html
+++ b/services.html
@@ -85,14 +85,14 @@
             <div class="col-lg-6">
                 <div class="content-card h-100">
                     <h2 class="mb-3">My coaching style.</h2>
-                    <p>
-                        My approach is reflective, calm, and centred around awareness. I meet clients where they are, following their pace, their questions, and what naturally arises in the space we create together.
+
+        <p class="mb-4">
+            My approach is reflective, calm, and centred around awareness. I meet clients where they are, following their pace, their questions, and what naturally arises in the space we create together.
         </p>
 
         <p>
             When we understand the thoughts, patterns, and assumptions shaping our lives, we begin to act with greater clarity and intention.
         </p>
-                    </p>
                 </div>
             </div>
             
