--- a/index.html
+++ b/index.html
@@ -111,7 +111,24 @@
 
 
 
-        
+        <!-- HERO -->
+<section class="section-spacer hero-section">
+    <div class="container text-center">
+        <h1 class="mb-3">
+            A calm coaching space
+        </h1>
+
+        <h2 class="mb-4">
+            To pause, reconnect with who you are, and live in alignment with what truly matters to you.
+        </h2>
+
+        <p class="hero-intro">
+            At noein, I offer a thoughtful space for people who feel a quiet pull to step away from expectations,
+            reconnect with themselves, and move forward with clarity and confidence — guided by their values.
+        </p>
+    </div>
+</section>
+
               <section class="section-spacer section-hero-intro">
                   <div class="container">
                       <div class="row col-spacing-30 align-items-start">
