--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
 <section class="section-spacer hero-section">
     <div class="container text-center">
         <h1 class="mb-3">
-            A calm coaching space
+            <i class="blue-font-color">A coaching space for insight and alignment</i>
         </h1>
 
         <h2 class="mb-4">
-            To pause, reconnect with who you are, and live in alignment with what truly matters to you.
+            To pause, reconnect with who you are, and let clarity about what truly matters to you guide what comes next.
         </h2>
 
         <p class="hero-intro">
