--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <section class="section-spacer hero-section">
     <div class="container text-center">
         <h1 class="mb-3">
-            <i class="blue-font-color">A coaching space for insight and alignment</i>
+            A coaching space for insight and alignment
         </h1>
 
         <h2 class="mb-4">
