--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </h1>
 
         <h2 class="mb-4">
-            <i class="blue-font-color">To pause, reconnect with who you are, and let clarity about what truly matters to you guide what comes next.
+            To pause, reconnect with who you are, and let clarity about what truly matters to you guide what comes next.
         </h2>
 
         <p class="hero-intro">
