--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
         <!-- HERO -->
 <section class="section-spacer hero-section">
     <div class="container text-center">
-        <h1 class="mb-3">
-            A coaching space for insight and alignment
-        </h1>
+        <h1 class="mb-3 blue-font-color">
+    A coaching space for insight and alignment
+</h1>
 
         <h2 class="mb-4">
             To pause, reconnect with who you are, and let clarity about what truly matters to you guide what comes next.
