--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <!-- HERO -->
 <section class="section-spacer hero-section">
     <div class="container text-center">
-        <h1 class="mb-3 blue-font-color">
+        <h1 class="mb-3 text-white">
     A coaching space for insight and alignment
 </h1>
 
