--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </div>
 </section>
 
-              <section class="section-spacer section-hero-intro">
+              <section class="section-spacer section-hero-intro pb-0">
                   <div class="container">
                       <div class="row col-spacing-30 align-items-start">
                         <div class="col-lg-12">
