--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </div>
       </section>
 
-      <section class="section-spacer">
+      <section class="section-spacer pt-0">
           <div class="container">
               <div class="row col-spacing-30 align-items-start">
                   <div class="col-lg-12">
