--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </div>
 </section>
 
-              <section class="section-spacer section-hero-intro pb-0">
+              <section class="section-spacer section-hero-intro">
                   <div class="container">
                       <div class="row col-spacing-30 align-items-start">
                         <div class="col-lg-12">
@@ -143,7 +143,7 @@
             </div>
       </section>
 
-      <section class="section-spacer" pt-0">
+      <section class="section-spacer">
           <div class="container">
               <div class="row col-spacing-30 align-items-start">
                   <div class="col-lg-12">
@@ -158,7 +158,7 @@
           </div>
       </section>
 
-              <section class="section-spacer" pb-0">
+              <section class="section-spacer">
                   <div class="container">
                       <div class="row col-spacing-30 align-items-start">
                         <div class="col-lg-12">
@@ -170,7 +170,7 @@
             </div>
       </section>
 
-        <section class="section-spacer" pt-0">
+        <section class="section-spacer">
             <div class="container">
                 <div class="row col-spacing-30 align-items-start">
                     <div class="col-lg-12">
@@ -185,7 +185,7 @@
         </section>
 
 
-                <section class="section-spacer" pb-0">
+                <section class="section-spacer">
                     <div class="container">
                         <div class="row col-spacing-30 align-items-start">
                           <div class="col-lg-12">
@@ -198,7 +198,7 @@
         </section>
 
 
-          <section class="section-spacer" pt-0">
+          <section class="section-spacer">
               <div class="container">
                   <div class="row col-spacing-30 align-items-start">
                       <div class="col-lg-12">
