--- a/services.html
+++ b/services.html
@@ -48,7 +48,9 @@
         <h2 class="mb-4">A calm space to think, reflect, and move forward with clarity.</h2>
         <p class="mb-0">
             Transformative coaching offers you time and space to explore what matters,
-            understand what’s shaping your choices, and reconnect with yourself.
+            understand what’s shaping your choices, and remember your true self.
+            Coaching at noein is for individuals and professionals who want to understand themselves more deeply, and make choices that feel aligned rather than imposed.
+It’s a space to reconnect with who you are, honour what matters to you, and move forward with greater clarity and confidence.
         </p>
     </div>
 </section>
