--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="index, follow">
-    <meta name="description" content="Transformative coaching with noein – a space to think, understand yourself, become "you".">
+    <meta name="description" content="Transformative coaching with noein – a space to think, understand yourself, become "You".">
     <meta name="keywords" content="transformative coaching, coaching services, clarity, confidence, noein">
     <link rel="canonical" href="https://www.noein.co.uk/services">
     <title>noein | coaching services</title>
