--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="index, follow">
-    <meta name="description" content="Transformative coaching with noein – a space to think, understand yourself, become "You".">
+    <meta name="description" content="Transformative coaching with noein – a space to think, understand yourself and become "You".">
     <meta name="keywords" content="transformative coaching, coaching services, clarity, confidence, noein">
     <link rel="canonical" href="https://www.noein.co.uk/services">
     <title>noein | coaching services</title>
@@ -45,7 +45,7 @@
 <section class="section-spacer">
     <div class="container text-center">
         <h1 class="mb-3">Coaching with <i class="blue-font-color">noein</i></h1>
-        <h2 class="mb-4">A space to think, understand yourself, become "You"</h2>
+        <h2 class="mb-4">A space to think, understand yourself and become "You"</h2>
         <p class="mb-0">
             Transformative coaching offers you time and space to explore what matters,
             understand what’s shaping your choices, and remember your true self.<p>
