--- a/about.html
+++ b/about.html
@@ -92,7 +92,10 @@
                     <div class="col-lg-7 mb-4 mb-lg-0">
                         <h1 class="mb-3">I'm <i class="blue-font-color">Alexandra</i>.</h1>
                         <h2 class="mb-3">A Transformative Coach, Architect, and the founder of noein.</h2>
-                        <p class="mb-3">My journey into coaching began while expanding my own career in architecture. As I grew in that world, I realised the skills I loved most were the human ones: listening, guiding, and helping others make sense of their thoughts. Over time, this became more than an interest — it became a natural path forward, and I trained as a Transformative Coach with the Animas Centre for Coaching.</p>
+                        <p class="mb-3">My journey into coaching began while expanding my own career in architecture. As I grew in that world, I realised the skills that stood out for me were the human ones: listening, guiding, and helping others make sense of their thoughts.</p>
+                        <p class="mb-3">For a long time, I felt pressure to find my place in architecture in a way that felt clearly defined and technical. It was only when I accepted that my interests might take a different form — and that they were still valid, still mine, and could be used meaningfully — that something shifted. With that acceptance came a sense of lightness and confidence, and a release from the stress of trying to force myself into a specialty that didn’t truly reflect who I am.</p>
+                        <p class="mb-3">I began to see that what I had to offer the practice I worked in was exactly this perspective. I introduced a focus on personal development, helping to cultivate a growth culture through mentoring and coaching within the office.</p>
+                        <p class="mb-3">Over time, this understanding became more than an interest; it became a natural path forward. I trained as a Transformative Coach with the Animas Centre for Coaching, realising that I didn’t have to choose between these two sides of myself — I could bring them together.</p>
                         <p class="mb-3">Noein is the space I once needed myself: a calm place to think, reflect, and reconnect with what feels true.</p></br>
                         <h3 class="">A space to think. A space to understand. A space to become.</h3></br></br>
 
