--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           </div>
       </section>
 
-              <section class="section-spacer pb-0">
+              <section class="section-spacer section-hero-intro pb-0">
                   <div class="container">
                       <div class="row col-spacing-30 align-items-start">
                         <div class="col-lg-12">
@@ -185,7 +185,7 @@
         </section>
 
 
-                <section class="section-spacer pb-0">
+                <section class="section-spacer section-hero-intro pb-0">
                     <div class="container">
                         <div class="row col-spacing-30 align-items-start">
                           <div class="col-lg-12">
