--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                       <div class="col-lg-12">
                           <div class="content-card h-100">
                               <h2 class="mb-3">Be authentically, you.</h2>
-                              <p class="mb-3">At noein, we support a process where self-awareness opens the door to deeper understanding - and from that clarity, choices and changes arise that feel aligned, natural, and authentically.</p>
+                              <p class="mb-3">At noein, we support a process where self-awareness opens the door to deeper understanding - and from that clarity, choices and changes arise that feel aligned, natural, and authentic.</p>
                           </div>
                       </div>
                   </div>
