--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 </h1>
 
         <h2 class="mb-4">
-            To pause, reconnect with who you are, and let clarity about what truly matters to you guide what comes next.
+            Transformative coaching for individuals and professionals seeking clarity, confidence, and alignment with what matters most.
         </h2>
 
         <p class="hero-intro">
