--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </h2>
 
         <p class="hero-intro">
-            At noein, I offer a thoughtful space for people who feel a quiet pull to step away from expectations,
+            I’m Alexandra — a Transformative Coach and Architect. At noein, I offer a thoughtful space for people who feel a quiet pull to step away from expectations,
             reconnect with themselves, and move forward with clarity and confidence — guided by their values.
         </p>
     </div>
