--- a/index.html
+++ b/index.html
@@ -115,29 +115,10 @@
 <section class="section-spacer hero-section">
     <div class="container text-center">
         <h1 class="mb-3 blue-font-color">
-    A coaching space for insight and alignment
+    Transformative coaching for individuals and professionals seeking clarity, confidence, and alignment with what matters most.
 </h1>
-
-        <h2 class="mb-4">
-            Transformative coaching for individuals and professionals seeking clarity, confidence, and alignment with what matters most.
-        </h2>
-
-        <p class="hero-intro">
-            I’m Alexandra — a Transformative Coach and Architect. At noein, I offer a thoughtful space for people who feel a quiet pull to step away from expectations,
-            reconnect with themselves, and move forward with clarity and confidence — guided by their values.
-        </p>
     </div>
 </section>
-
-              <section class="section-spacer section-hero-intro pb-0">
-                  <div class="container">
-                      <div class="row col-spacing-30 align-items-start">
-                        <div class="col-lg-12">
-                            <div class="content-card content-card--translucent h-100">
-  <h1 class="mb-0 text-center">
-    A space to <i class="blue-font-color">think</i>.
-  </h1>
-</div>
                         </div>
               </div>
             </div>
@@ -148,15 +129,28 @@
               <div class="row col-spacing-30 align-items-start">
                   <div class="col-lg-12">
                       <div class="content-card h-100">
-                          <h2 class="mb-3">Transformative coaching for inner clarity.</h2>
-                          <p class="mb-3">At noein, you step into a quiet space of reflection — a place to slow down, explore your thoughts, and rediscover what feels true for you. noein is an online coaching practice based in London, offering one-to-one transformative coaching for clients in the UK and worldwide.</p>
+                          <h2 class="mb-3"> A coaching space for insight and alignment.</h2>
+                          <p class="mb-3">I’m Alexandra — a Transformative Coach, Architect and founder of Noein. I support people who feel a quiet pull to step away from expectations,
+            reconnect with themselves, and move forward with clarity and confidence — guided by their values.</p>
+                          <p class="mb-3">At Noein, you step into a space of personal reflection — a place to slow down, explore your thoughts, and rediscover what feels true for you. </p>
                           <p class="mb-3">It’s a calm space for honest conversation, thoughtful insight, and gentle transformation. Coaching here isn’t about being given answers; it’s about reconnecting with yourself and uncovering what’s already within you.</p>
-                          <p class="mb-4">This is coaching that begins with awareness, deepens into understanding, and moves naturally into meaningful change and action.</p>
+                          <p class="mb-3">This is coaching that begins with awareness, deepens into understanding, and moves naturally into meaningful change and action.</p>
+                          <p class="mb-4">— A space to think. A space to understand. A space to become.</p>
                           </div>
                   </div>
               </div>
           </div>
       </section>
+
+                  <section class="section-spacer section-hero-intro pb-0">
+                  <div class="container">
+                      <div class="row col-spacing-30 align-items-start">
+                        <div class="col-lg-12">
+                            <div class="content-card content-card--translucent h-100">
+  <h1 class="mb-0 text-center">
+    A space to <i class="blue-font-color">think</i>.
+  </h1>
+</div>
 
               <section class="section-spacer section-hero-intro pb-0">
                   <div class="container">
@@ -169,20 +163,6 @@
               </div>
             </div>
       </section>
-
-<section class="section-spacer section-hero-content pt-0">
-            <div class="container">
-                <div class="row col-spacing-30 align-items-start">
-                    <div class="col-lg-12">
-                        <div class="content-card h-100">
-                            <h2 class="mb-3">A calm space for honest conversation.</h2>
-                            <p class="mb-3">You’re invited to slow down and reconnect with yourself; this is a place to notice what’s happening inside, understand the choices you’ve made, and remember where you want those choices to take you.</p>
-                            <p class="mb-3">Coaching here is not about supplying quick fixes. It’s about helping you uncover the clarity, confidence, and direction that are already within you.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
 
 
                 <section class="section-spacer section-hero-intro pb-0">
@@ -197,19 +177,6 @@
               </div>
         </section>
 
-
-            <section class="section-spacer section-hero-content pt-0">
-              <div class="container">
-                  <div class="row col-spacing-30 align-items-start">
-                      <div class="col-lg-12">
-                          <div class="content-card h-100">
-                              <h2 class="mb-3">Be authentically, you.</h2>
-                              <p class="mb-3">At noein, we support a process where self-awareness opens the door to deeper understanding - and from that clarity, choices and changes arise that feel aligned, natural, and authentic.</p>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </section>
 
         <section class="section-spacer">
             <div class="container">
