--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
         <!-- HERO -->
 <section class="section-spacer hero-section">
     <div class="container text-center">
-        <h1 class="mb-3 blue-font-color">
+        <h2 class="mb-4 blue-font-color">
     Transformative coaching for individuals and professionals seeking clarity, confidence, and alignment with what matters most.
-</h1>
+</h2>
     </div>
 </section>
                         </div>
@@ -151,6 +151,10 @@
     A space to <i class="blue-font-color">think</i>.
   </h1>
 </div>
+    </div>
+              </div>
+            </div>
+      </section>
 
               <section class="section-spacer section-hero-intro pb-0">
                   <div class="container">
