--- a/index.html
+++ b/index.html
@@ -142,19 +142,17 @@
           </div>
       </section>
 
-                  <section class="section-spacer section-hero-intro pb-0">
+              <section class="section-spacer section-hero-intro pb-0">
                   <div class="container">
                       <div class="row col-spacing-30 align-items-start">
                         <div class="col-lg-12">
                             <div class="content-card content-card--translucent h-100">
-  <h1 class="mb-0 text-center">
-    A space to <i class="blue-font-color">think</i>.
-  </h1>
-</div>
-    </div>
+                              <h1 class="mb-0 text-center">A space to <i class="blue-font-color">think</i>.</h1>
+                            </div>
+                        </div>
               </div>
             </div>
-      </section>
+      </section>                 
 
               <section class="section-spacer section-hero-intro pb-0">
                   <div class="container">
