--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <div class="row col-spacing-30 align-items-start">
                     <div class="col-lg-4 order-lg-3 mb-4 mb-lg-0">
                         <div class="content-card h-100">
-                            <h2 class="mb-3">How we work, together.</h2>
+                             <h1 class="mb-0 text-center">A space to <i class="blue-font-color">think</i>.</h1>
                             <ul class="list-checks mb-4">
                                 <li>Begin with awareness, deepen into understanding, and move into meaningful change.</li>
                                 <li>Explore your thoughts, patterns, and assumptions at a pace that feels right for you.</li>
@@ -196,7 +196,7 @@
 
                         <div class="col-lg-4 order-lg-2 mb-4 mb-lg-0">
                                       <div class="content-card h-100">
-                                          <h2 class="mb-3">What this space holds.</h2>
+                                          <h1 class="mb-0 text-center">A space to <i class="blue-font-color">understand</i>.</h1>
                                           <ul class="list-checks mb-0">
                                               <li>Honest reflection without pressure.</li>
                                               <li>Insight that feels gentle and grounded.</li>
@@ -215,7 +215,7 @@
 
                     <div class="col-lg-4 order-lg-1 mb-4 mb-lg-0">
                         <div class="content-card h-100">
-                            <h2 class="mb-3">Who this space is for.</h2>
+                            <h1 class="mb-0 text-center">A space to <i class="blue-font-color">become</i>.</h1>
                             <ul class="list-checks mb-0">
                                 <li>Sensing a pull toward something more aligned in life or work.</li>
                                 <li>Wanting more clarity about your direction or next steps.</li>
