--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <section class="section-spacer hero-section">
     <div class="container text-center">
          <h1 class="mb-3 blue-font-color">
-    <h1 class="mb-3">noein<i class="blue-font-color"> — A space to think.</i></h1>
+    <h1 class="mb-3 blue-font-color">noein<i class="mb-3"> — A space to think.</i></h1>
 </h1>
 
         <h2 class="mb-4">
