--- a/index.html
+++ b/index.html
@@ -139,8 +139,7 @@
             reconnect with themselves, and move forward with clarity and confidence — guided by their values.</p>
                           <p class="mb-3">At Noein, you step into a space of personal reflection — a place to slow down, explore your thoughts, and rediscover what feels true for you. </p>
                           <p class="mb-3">It’s a calm space for honest conversation, thoughtful insight, and gentle transformation. Coaching here isn’t about being given answers; it’s about reconnecting with yourself and uncovering what’s already within you.</p>
-                          <p class="mb-3">This is coaching that begins with awareness, deepens into understanding, and moves naturally into meaningful change and action.</p>
-                          <p class="mb-4">— A space to think. A space to understand. A space to become.</p>
+                          <p class="mb-4">Coaching at noein begins with space — space to think freely, to understand what truly matters, and to become more aligned with who you are and how you choose to live.</p>
                           </div>
                   </div>
               </div>
