--- a/index.html
+++ b/index.html
@@ -188,24 +188,22 @@
                 <div class="row col-spacing-30 align-items-start">
                     <div class="col-lg-4 order-lg-3 mb-4 mb-lg-0">
                         <div class="content-card h-100">
-                             <h2 class="mb-0 text-center">A space to <i class="blue-font-color">become</i>.</h1>
+                             <h2 class="mb-4 text-center">A space to <i class="blue-font-color">become</i>.</h1>
                             <ul class="list-checks mb-4">
-                                <li>Begin with awareness, deepen into understanding, and move into meaningful change.</li>
-                                <li>Explore your thoughts, patterns, and assumptions at a pace that feels right for you.</li>
-                                <li>Find alignment between who you are and what you do through reflective conversation.</li>
-                                <li>Leave each session with grounded insight and a calmer next step.</li>
+                                <li>Integrating insight.</li>
+                                <li>Returning to what feels true.</li>
+                                <li>Action shaped by values and priorities.</li>
                             </ul>
                             <!-- a class="btn btn-outline-dark" href="contact.html">See how sessions work</a -->
                         </div></div>
 
                         <div class="col-lg-4 order-lg-2 mb-4 mb-lg-0">
                                       <div class="content-card h-100">
-                                          <h2 class="mb-0 text-center">A space to <i class="blue-font-color">understand</i>.</h1>
-                                          <ul class="list-checks mb-0">
-                                              <li>Honest reflection without pressure.</li>
-                                              <li>Insight that feels gentle and grounded.</li>
-                                              <li>Clarity that turns into thoughtful action.</li>
-                                              <li>A partner who meets you where you are.</li>
+                                          <h2 class="mb-4 text-center">A space to <i class="blue-font-color">understand</i>.</h1>
+                                          <ul class="list-checks mb-4">
+                                              <li>Seeing patterns clearly.</li>
+                                              <li>Making sense of what you're experiencing.</li>
+                                              <li>Allowing insight to emerge.</li>
                                           </ul>
                                         </br>
                                           <div class="d-flex flex-wrap align-items-center">
@@ -219,12 +217,11 @@
 
                     <div class="col-lg-4 order-lg-1 mb-4 mb-lg-0">
                         <div class="content-card h-100">
-                            <h2 class="mb-0 text-center">A space to <i class="blue-font-color">think</i>.</h1>
-                            <ul class="list-checks mb-0">
-                                <li>Sensing a pull toward something more aligned in life or work.</li>
-                                <li>Wanting more clarity about your direction or next steps.</li>
-                                <li>Ready to reconnect with your values and what feels true for you.</li>
-                                <li>Looking for gentle, grounded support rather than pressure or quick fixes.</li>
+                            <h2 class="mb-4 text-center">A space to <i class="blue-font-color">think</i>.</h1>
+                            <ul class="list-checks mb-4">
+                                <li>Exploration and widening awareness.</li>
+                                <li>Expanding perspective and possibility.</li>
+                                <li>Gentle curiosity.</li>
                             </ul>
                             <p class="mt-3 mb-0">You can read more about Alexandra’s background on the <a href="/about">About page</a>.</p>
                         </div>
