--- a/index.html
+++ b/index.html
@@ -187,21 +187,34 @@
             <section class="section-spacer">
             <div class="container">
                 <div class="row col-spacing-30 align-items-start">
-                    <div class="col-lg-4 order-lg-3 mb-4 mb-lg-0">
-                        <div class="content-card h-100">
-                             <h2 class="mb-4 text-center">A space to <i class="blue-font-color">become</i>.</h1>
-                            <ul class="list-checks mb-4">
-                                <li>Integrating insight.</li>
-                                <li>Returning to what feels true.</li>
-                                <li>Action shaped by values and priorities.</li>
-                            </ul>
-                            <!-- a class="btn btn-outline-dark" href="contact.html">See how sessions work</a -->
-                        </div></div>
+                    <div class="col-lg-4 order-lg-3 mb-4 mb-lg-0 text-center">
 
-                        <div class="col-lg-4 order-lg-2 mb-4 mb-lg-0">
-                                      <div class="content-card h-100">
-                                          <h2 class="mb-4 text-center">A space to <i class="blue-font-color">understand</i>.</h1>
-                                          <ul class="list-checks mb-4">
+    <!-- Title ABOVE the card -->
+    <h1 class="mb-3">
+        A space to <i class="blue-font-color">become</i>.
+    </h2>
+
+    <!-- Card -->
+    <div class="content-card h-100">
+        <ul class="list-checks mb-0">
+            <li>Integrating insight.</li>
+            <li>Returning to what feels true.</li>
+            <li>Action shaped by values and priorities.</li>
+        </ul>
+    </div>
+
+</div>
+
+                        <div class="col-lg-4 order-lg-3 mb-4 mb-lg-0 text-center">
+
+    <!-- Title ABOVE the card -->
+    <h1 class="mb-3">
+        A space to <i class="blue-font-color">understand</i>.
+    </h2>
+
+    <!-- Card -->
+    <div class="content-card h-100">
+        <ul class="list-checks mb-0">
                                               <li>Seeing patterns clearly.</li>
                                               <li>Making sense of what you're experiencing.</li>
                                               <li>Allowing insight to emerge.</li>
@@ -215,10 +228,16 @@
                                       </div>
                                   </div>
 
-                    <div class="col-lg-4 order-lg-1 mb-4 mb-lg-0">
-                        <div class="content-card h-100">
-                            <h2 class="mb-4 text-center">A space to <i class="blue-font-color">think</i>.</h1>
-                            <ul class="list-checks mb-4">
+                    <div class="col-lg-4 order-lg-3 mb-4 mb-lg-0 text-center">
+
+    <!-- Title ABOVE the card -->
+    <h1 class="mb-3">
+        A space to <i class="blue-font-color">think</i>.
+    </h2>
+
+    <!-- Card -->
+    <div class="content-card h-100">
+        <ul class="list-checks mb-0">
                                 <li>Exploration and widening awareness.</li>
                                 <li>Expanding perspective and possibility.</li>
                                 <li>Gentle curiosity.</li>
