--- a/index.html
+++ b/index.html
@@ -130,22 +130,38 @@
       </section>
 
 <section class="section-spacer section-hero-content pt-0">
-          <div class="container">
-              <div class="row col-spacing-30 align-items-start">
-                  <div class="col-lg-12">
-                      <div class="content-card h-100">
-                          <h2 class="mb-3"> A coaching space for insight and alignment.</h2>
-                          <p class="mb-3">I’m Alexandra — a Transformative Coach, Architect and founder of Noein. I support people who feel a quiet pull to step away from expectations,
-            reconnect with themselves, and move forward with clarity and confidence — guided by their values.</p>
-                          <p class="mb-3">At Noein, you step into a space of personal reflection — a place to slow down, explore your thoughts, and rediscover what feels true for you. </p>
-                          <p class="mb-3">It’s a calm space for honest conversation, thoughtful insight, and gentle transformation. Coaching here isn’t about being given answers; it’s about reconnecting with yourself and uncovering what’s already within you.</p>
-                          <p class="mb-4">Coaching at noein begins with space — space to think freely, to understand what truly matters, and to become more aligned with who you are and how you choose to live.</p>
-                          </ul>
-                          <p class="mt-3 mb-0">You can read more about Alexandra’s background on the <a href="/about">About page</a>.</p>
-                  </div>
-              </div>
-          </div>
-      </section>
+  <div class="container">
+    <div class="row col-spacing-30 align-items-start">
+      <div class="col-lg-12">
+        <div class="content-card h-100">
+          <h2 class="mb-3">A coaching space for insight and alignment.</h2>
+
+          <p class="mb-3">
+            I’m Alexandra — a Transformative Coach, Architect and founder of Noein. I support people who feel a quiet pull to step away from expectations,
+            reconnect with themselves, and move forward with clarity and confidence — guided by their values.
+          </p>
+
+          <p class="mb-3">
+            At Noein, you step into a space of personal reflection — a place to slow down, explore your thoughts, and rediscover what feels true for you.
+          </p>
+
+          <p class="mb-3">
+            It’s a calm space for honest conversation, thoughtful insight, and gentle transformation. Coaching here isn’t about being given answers; it’s about reconnecting with yourself and uncovering what’s already within you.
+          </p>
+
+          <p class="mb-4">
+            Coaching at noein begins with space — space to think freely, to understand what truly matters, and to become more aligned with who you are and how you choose to live.
+          </p>
+
+          <p class="mt-3 mb-0">
+            You can read more about Alexandra’s background on the <a href="/about">About page</a>.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
              
                 </div>
