--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 
         <!-- HERO -->
-<section class="section-spacer hero-section">
+<section class="section-spacer section-hero-intro hero-section">
     <div class="container text-center">
          <h1 class="mb-3 blue-font-color">
     <h1 class="mb-3">noein<i class="blue-font-color"> — A space to think.</i></h1>
