--- a/index.html
+++ b/index.html
@@ -114,9 +114,10 @@
         <!-- HERO -->
 <section class="section-spacer section-hero-intro hero-section">
     <div class="container text-center">
-         <h1 class="mb-3 blue-font-color">
-    <h1 class="mb-3">noein<i class="blue-font-color"> — A space to think.</i></h1>
+         <h1 class="mb-3">
+  <span class="blue-font-color">noein</span><i> — A space to think.</i>
 </h1>
+
 
         <h2 class="mb-4">
             Transformative coaching for individuals and professionals seeking clarity, confidence, and alignment with what matters most.
