--- a/index.html
+++ b/index.html
@@ -114,12 +114,14 @@
         <!-- HERO -->
 <section class="section-spacer section-hero-intro hero-section">
     <div class="container text-center">
-         <h1 class="mb-3">
-  <span class="blue-font-color">noein</span><i> — A space to think.</i>
+         <h1 class="mb-2">
+  <span class="blue-font-color">noein</span>
+  <span class="hero-separator">—</span>
+  <span class="hero-phrase">a space to think</span>
 </h1>
 
 
-        <h2 class="mb-4">
+        <h2 class="hero-subtitle mb-4">
             Transformative coaching for individuals and professionals seeking clarity, confidence, and alignment with what matters most.
         </h2>
   
