--- a/index.html
+++ b/index.html
@@ -166,35 +166,50 @@
     <div class="row col-spacing-30 align-items-start">
 
       <!-- THINK -->
-      <div class="col-lg-4 mb-4 mb-lg-0">
-        <div class="content-card h-100 text-center">
+      <div class="col-lg-4 mb-4 mb-lg-0 text-center">
 
-          <img src="assets/images/space-think.jpg" alt="A space to think" class="space-card-img">
+  <!-- Title ABOVE everything -->
+  <h2 class="mb-3">
+    A space to <i class="blue-font-color">think</i>.
+  </h2>
 
-          <h2 class="mb-3">
-            A space to <i class="blue-font-color">think</i>.
-          </h2>
+  <!-- Image ABOVE the card -->
+  <img
+    src="assets/images/space-think.jpg"
+    alt="A space to think"
+    class="space-card-img"
+  >
 
-          <ul class="list-checks mb-4 text-left">
-            <li>Exploration and widening awareness.</li>
-            <li>Expanding perspective and possibility.</li>
-            <li>Gentle curiosity.</li>
-          </ul>
+  <!-- Card (text only) -->
+  <div class="content-card h-100">
+    <ul class="list-checks mb-0 text-left">
+      <li>Exploration and widening awareness.</li>
+      <li>Expanding perspective and possibility.</li>
+      <li>Gentle curiosity.</li>
+    </ul>
+  </div>
 
-        </div>
-      </div>
+</div>
+
 
       <!-- UNDERSTAND -->
-      <div class="col-lg-4 mb-4 mb-lg-0">
-        <div class="content-card h-100 text-center">
+      <<div class="col-lg-4 mb-4 mb-lg-0 text-center">
 
-          <img src="assets/images/space-understand.jpg" alt="A space to understand" class="space-card-img">
+  <!-- Title ABOVE everything -->
+  <h2 class="mb-3">
+    A space to <i class="blue-font-color">understand</i>.
+  </h2>
 
-          <h2 class="mb-3">
-            A space to <i class="blue-font-color">understand</i>.
-          </h2>
+  <!-- Image ABOVE the card -->
+  <img
+    src="assets/images/space-understand.jpg"
+    alt="A space to understand"
+    class="space-card-img"
+  >
 
-          <ul class="list-checks mb-4 text-left">
+  <!-- Card (text only) -->
+  <div class="content-card h-100">
+    <ul class="list-checks mb-0 text-left">
             <li>Seeing patterns clearly.</li>
             <li>Making sense of what you're experiencing.</li>
             <li>Allowing insight to emerge.</li>
@@ -204,16 +219,23 @@
       </div>
 
       <!-- BECOME -->
-      <div class="col-lg-4 mb-4 mb-lg-0">
-        <div class="content-card h-100 text-center">
+      <div class="col-lg-4 mb-4 mb-lg-0 text-center">
 
-          <img src="assets/images/space-become.jpg" alt="A space to become" class="space-card-img">
+  <!-- Title ABOVE everything -->
+  <h2 class="mb-3">
+    A space to <i class="blue-font-color">become</i>.
+  </h2>
 
-          <h2 class="mb-3">
-            A space to <i class="blue-font-color">become</i>.
-          </h2>
+  <!-- Image ABOVE the card -->
+  <img
+    src="assets/images/space-become.jpg"
+    alt="A space to become"
+    class="space-card-img"
+  >
 
-          <ul class="list-checks mb-4 text-left">
+  <!-- Card (text only) -->
+  <div class="content-card h-100">
+    <ul class="list-checks mb-0 text-left">
             <li>Integrating insight.</li>
             <li>Returning to what feels true.</li>
             <li>Action shaped by values and priorities.</li>
