--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
           <a class="navbar-brand" href="/">
             <div class="card">
-              <img src="assets/images/title.svg" alt="Logo">
-              <img src="assets/images/title-hover.svg" alt="Logo Hover" class="img-top">
+              <img src="assets/images/title.svg" alt="noein logo">
+              <img src="assets/images/title-hover.svg" alt="noein logo hover" class="img-top">
             </div>
           </a>
 
@@ -99,7 +99,6 @@
       <!-- HERO IMAGE -->
       <section class="hero-image">
         <img src="assets/images/hero.png" alt="A quiet space to think">
-
         <div class="hero-overlay">
           <blockquote>
             <p>“Within yourself is a stillness, a sanctuary to which you can retreat at any time and be yourself.”</p>
@@ -108,7 +107,7 @@
         </div>
       </section>
 
-      <!-- HERO TITLE + SUBTITLE -->
+      <!-- HERO TEXT -->
       <section class="section-spacer section-hero-intro hero-section">
         <div class="container text-center">
 
@@ -118,7 +117,7 @@
             <span class="hero-phrase">a space to think</span>
           </h1>
 
-          <h2 class="hero-subtitle mb-0">
+          <h2 class="hero-subtitle mb-4">
             Transformative coaching for individuals and professionals seeking clarity, confidence, and alignment with what matters most.
           </h2>
 
@@ -159,65 +158,77 @@
         </div>
       </section>
 
-      <!-- THREE "SPACE TO" CARDS -->
+      <!-- A SPACE TO... (3 CARDS) -->
       <section class="section-spacer">
         <div class="container">
           <div class="row col-spacing-30 align-items-start">
 
             <!-- THINK -->
-            <div class="col-lg-4 mb-4 mb-lg-0 text-center">
-              <h2 class="mb-3">A space to <i class="blue-font-color">think</i>.</h2>
+            <div class="col-lg-4 mb-4 mb-lg-0">
+              <div class="content-card h-100 text-center">
 
-              <img
-                src="assets/images/space-think.jpg"
-                alt="A space to think"
-                class="space-card-img"
-              >
+                <img
+                  src="assets/images/space-think.jpg"
+                  alt="A space to think"
+                  class="space-card-img"
+                >
 
-              <div class="content-card h-100">
+                <h2 class="mb-3">
+                  A space to <i class="blue-font-color">think</i>.
+                </h2>
+
                 <ul class="list-checks mb-0 text-left">
                   <li>Exploration and widening awareness.</li>
                   <li>Expanding perspective and possibility.</li>
                   <li>Gentle curiosity.</li>
                 </ul>
+
               </div>
             </div>
 
             <!-- UNDERSTAND -->
-            <div class="col-lg-4 mb-4 mb-lg-0 text-center">
-              <h2 class="mb-3">A space to <i class="blue-font-color">understand</i>.</h2>
+            <div class="col-lg-4 mb-4 mb-lg-0">
+              <div class="content-card h-100 text-center">
 
-              <img
-                src="assets/images/space-understand.jpg"
-                alt="A space to understand"
-                class="space-card-img"
-              >
+                <img
+                  src="assets/images/space-understand.jpg"
+                  alt="A space to understand"
+                  class="space-card-img"
+                >
 
-              <div class="content-card h-100">
+                <h2 class="mb-3">
+                  A space to <i class="blue-font-color">understand</i>.
+                </h2>
+
                 <ul class="list-checks mb-0 text-left">
                   <li>Seeing patterns clearly.</li>
-                  <li>Making sense of what you’re experiencing.</li>
+                  <li>Making sense of what you're experiencing.</li>
                   <li>Allowing insight to emerge.</li>
                 </ul>
+
               </div>
             </div>
 
             <!-- BECOME -->
-            <div class="col-lg-4 mb-4 mb-lg-0 text-center">
-              <h2 class="mb-3">A space to <i class="blue-font-color">become</i>.</h2>
+            <div class="col-lg-4 mb-4 mb-lg-0">
+              <div class="content-card h-100 text-center">
 
-              <img
-                src="assets/images/space-become.jpg"
-                alt="A space to become"
-                class="space-card-img"
-              >
+                <img
+                  src="assets/images/space-become.jpg"
+                  alt="A space to become"
+                  class="space-card-img"
+                >
 
-              <div class="content-card h-100">
+                <h2 class="mb-3">
+                  A space to <i class="blue-font-color">become</i>.
+                </h2>
+
                 <ul class="list-checks mb-0 text-left">
                   <li>Integrating insight.</li>
                   <li>Returning to what feels true.</li>
                   <li>Action shaped by values and priorities.</li>
                 </ul>
+
               </div>
             </div>
 
@@ -229,7 +240,6 @@
       <section class="section-spacer">
         <div class="container">
           <div class="content-card">
-
             <div class="row mb-4 align-items-center">
               <div class="col-lg-8">
                 <h2 class="mb-0">What people say.</h2>
@@ -241,10 +251,21 @@
 
             <div class="row">
               <div class="col-12">
-                <div class="owl-carousel testimonial-carousel" id="testimonialCarousel"
-                  data-owl-items="2" data-owl-xs="1" data-owl-sm="1" data-owl-md="2" data-owl-lg="2"
-                  data-owl-margin="24" data-owl-dots="true" data-owl-nav="false" data-owl-loop="true"
-                  data-owl-autoplay="true" data-owl-autoplayTimeout="6000">
+                <div
+                  class="owl-carousel testimonial-carousel"
+                  id="testimonialCarousel"
+                  data-owl-items="2"
+                  data-owl-xs="1"
+                  data-owl-sm="1"
+                  data-owl-md="2"
+                  data-owl-lg="2"
+                  data-owl-margin="24"
+                  data-owl-dots="true"
+                  data-owl-nav="false"
+                  data-owl-loop="true"
+                  data-owl-autoplay="true"
+                  data-owl-autoplayTimeout="6000"
+                >
 
                   <div class="testimonial-carousel-card">
                     <div>
@@ -327,14 +348,9 @@
           <div class="row align-items-center">
 
             <div class="col-12 col-md-4 text-center text-md-left">
-              <h3 class="heading-uppercase font-family-roboto grey-font-color"><b>
-                &copy;
-                <span id="copyright"></span>
-                noein
-              </b></h3>
-              <script>
-                document.getElementById('copyright').textContent = new Date().getFullYear();
-              </script>
+              <h3 class="heading-uppercase font-family-roboto grey-font-color">
+                <b>&copy; <span id="copyright"></span> noein</b>
+              </h3>
             </div>
 
             <div class="col-12 col-md-4 text-center">
@@ -358,13 +374,23 @@
   </div>
 
   <!-- ***** JAVASCRIPTS ***** -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      var el = document.getElementById("copyright");
+      if (el) el.textContent = new Date().getFullYear();
+    });
+  </script>
+
+  <!-- Libraries -->
   <script src="assets/plugins/jquery.min.js"></script>
   <script src="assets/plugins/bootstrap/popperold.min.js"></script>
 
+  <!-- Plugins -->
   <script src="assets/plugins/bootstrap/bootstrap.min.js"></script>
   <script src="assets/plugins/appear.min.js"></script>
   <script src="assets/plugins/easing.min.js"></script>
   <script src="assets/plugins/retina.min.js"></script>
+  <script src="assets/plugins/retina.js"></script>
   <script src="assets/plugins/countdown.min.js"></script>
   <script src="assets/plugins/imagesloaded.pkgd.min.js"></script>
   <script src="assets/plugins/isotope.pkgd.min.js"></script>
@@ -374,10 +400,11 @@
   <script src="assets/plugins/magnific-popup/magnific-popup.min.js"></script>
   <script src="assets/plugins/owl-carousel/owl.carousel.min.js"></script>
 
-  <!-- (Optional) Google Maps - remove if you’re not using it -->
+  <!-- If you don't use Google Maps on this page, remove these two lines -->
   <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"></script>
   <script src="assets/plugins/gmaps.min.js"></script>
 
+  <!-- Scripts -->
   <script src="assets/js/functions.js"></script>
 </body>
 </html>
