--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </section>
 
       <!-- THREE "SPACE TO" CARDS -->
-      <section class="section-spacer">
+      <section class="section-spacer space-cards-section">
         <div class="container">
           <div class="row col-spacing-30 align-items-start">
 
