--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       </section>
 
       <!-- TESTIMONIALS -->
-      <section class="section-spacer">
+      <section class="section-spacer space-cards-section">
         <div class="container">
           <div class="content-card">
 
