--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
       </section>
 
       <!-- TESTIMONIALS -->
-      <section class="section-spacer">
+      <!-- TESTIMONIALS -->
+<section class="section-spacer testimonials-section">
         <div class="container">
           <div class="content-card">
 
