--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
       <!-- TESTIMONIALS -->
       <!-- TESTIMONIALS -->
-<section class="section-spacer">
+<section class="section-spacer testimonials-section">
         <div class="container">
           <div class="content-card">
 
