--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="container text-center">
 
           <h1 class="mb-2">
-            <span class="blue-font-color">noein</span>
+            <span class="blue-font-color hero-noein">noein</span>
             <span class="hero-separator">—</span>
             <span class="hero-phrase">a space to think</span>
           </h1>
