--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
         <div class="container text-center">
 
           <h1 class="mb-2">
-            <span class="blue-font-color hero-noein">noein</span>
-            <span class="hero-separator">—</span>
-            <span class="hero-phrase">a space to think</span>
+            <class="blue-font-color hero-noein">noein
+            <class="hero-separator"
+            <class="hero-phrase">a space to think
           </h1>
 
           <h2 class="hero-subtitle mb-0">
