--- a/index.html
+++ b/index.html
@@ -113,10 +113,11 @@
         <div class="container text-center">
 
           <h1 class="mb-2">
-            <class="blue-font-color hero-noein">noein
-            <class="hero-separator"
-            <class="hero-phrase">a space to think
-          </h1>
+  <span class="blue-font-color hero-noein">noein</span>
+  <span class="hero-separator">—</span>
+  <span class="hero-phrase">a space to think</span>
+</h1>
+
 
           <h2 class="hero-subtitle mb-0">
             Transformative coaching for individuals and professionals seeking clarity, confidence, and alignment with what matters most.
