--- a/index.html
+++ b/index.html
@@ -112,17 +112,9 @@
       <section class="section-spacer section-hero-intro hero-section">
         <div class="container text-center">
 
-          <h1 class="mb-2">
-  <span class="blue-font-color hero-noein">noein</span>
-  <span class="hero-separator">—</span>
-  <span class="hero-phrase">a space to think</span>
-</h1>
-
-
-          <h2 class="hero-subtitle mb-0">
-            Transformative coaching for individuals and professionals seeking clarity, confidence, and alignment with what matters most.
-          </h2>
-
+            <h1 class="mb-3">noein <i class="blue-font-color">— A Space to Think</i>.</h1>
+            <h2 class="mb-3">Transformative coaching for individuals and professionals seeking clarity, confidence, and alignment with what matters most.</h2>
+        
         </div>
       </section>
 
