--- a/index.html
+++ b/index.html
@@ -214,6 +214,10 @@
               </div>
             </div>
 
+          </div> 
+        </div> 
+      </section>
+
 
       <!-- TESTIMONIALS -->
 <section class="section-spacer testimonials-section">
