--- a/index.html
+++ b/index.html
@@ -118,6 +118,73 @@
         </div>
       </section>
 
+      <!-- THREE "SPACE TO" CARDS -->
+      <section class="section-spacer space-cards-section">
+        <div class="container">
+          <div class="row col-spacing-30 align-items-start">
+
+            <!-- THINK -->
+            <div class="col-lg-4 mb-4 mb-lg-0 text-center">
+              <h2 class="mb-3">A space to <i class="blue-font-color">think</i>.</h2>
+
+              <img
+                src="assets/images/space-think.jpg"
+                alt="A space to think"
+                class="space-card-img"
+              >
+
+              <div class="content-card h-100">
+                <ul class="list-checks mb-0 text-left">
+                  <li>Exploration and widening awareness.</li>
+                  <li>Expanding perspective and possibility.</li>
+                  <li>Gentle curiosity.</li>
+                </ul>
+              </div>
+            </div>
+
+            <!-- UNDERSTAND -->
+            <div class="col-lg-4 mb-4 mb-lg-0 text-center">
+              <h2 class="mb-3">A space to <i class="blue-font-color">understand</i>.</h2>
+
+              <img
+                src="assets/images/space-understand.jpg"
+                alt="A space to understand"
+                class="space-card-img"
+              >
+
+              <div class="content-card h-100">
+                <ul class="list-checks mb-0 text-left">
+                  <li>Seeing patterns clearly.</li>
+                  <li>Making sense of what you’re experiencing.</li>
+                  <li>Allowing insight to emerge.</li>
+                </ul>
+              </div>
+            </div>
+
+            <!-- BECOME -->
+            <div class="col-lg-4 mb-4 mb-lg-0 text-center">
+              <h2 class="mb-3">A space to <i class="blue-font-color">become</i>.</h2>
+
+              <img
+                src="assets/images/space-become.jpg"
+                alt="A space to become"
+                class="space-card-img"
+              >
+
+              <div class="content-card h-100">
+                <ul class="list-checks mb-0 text-left">
+                  <li>Integrating insight.</li>
+                  <li>Returning to what feels true.</li>
+                  <li>Action shaped by values and priorities.</li>
+                </ul>
+              </div>
+            </div>
+
+          </div> 
+        </div> 
+      </section>
+
+      
       <!-- INTRO CARD -->
       <section class="section-spacer section-hero-content pt-0">
         <div class="container">
