--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
           </div> 
         </div> 
-      </section>
+      </section> <!-- END space-cards-section -->
 
 
       <!-- TESTIMONIALS -->
