--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 class="space-card-img"
               >
 
-              <div class="content-card">
+              <div class="content-card h-30">
                 <ul class="list-checks mb-0 text-left">
                   <li>Exploration and widening awareness.</li>
                   <li>Expanding perspective and possibility.</li>
@@ -187,7 +187,7 @@
                 class="space-card-img"
               >
 
-              <div class="content-card">
+              <div class="content-card h-30">
                 <ul class="list-checks mb-0 text-left">
                   <li>Seeing patterns clearly.</li>
                   <li>Making sense of what you’re experiencing.</li>
@@ -206,7 +206,7 @@
                 class="space-card-img"
               >
 
-              <div class="content-card">
+              <div class="content-card h-30">
                 <ul class="list-checks mb-0 text-left">
                   <li>Integrating insight.</li>
                   <li>Returning to what feels true.</li>
