--- a/index.html
+++ b/index.html
@@ -245,35 +245,35 @@
                   <div class="testimonial-carousel-card">
                     <div>
                       <p class="mb-3">“Working with Alexandra was a truly valuable experience. From the very beginning, she created a safe and comfortable space where I felt at ease sharing my thoughts and past experiences. Through her guidance, I gained deeper self-awareness, a clearer understanding of my strengths, and a fresh perspective on my professional environment.”</p>
-                      <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
+                      <p class="mb-0 text-primary"><strong>V.H., Brighton, UK</strong></p>
                     </div>
                   </div>
 
                   <div class="testimonial-carousel-card">
                     <div>
                       <p class="mb-3">“Alexandra was considerate and thought-provoking throughout the coaching. She had a considered yet straightforward approach.”</p>
-                      <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
+                      <p class="mb-0 text-primary"><strong>G.B., London, UK</strong></p>
                     </div>
                   </div>
 
                   <div class="testimonial-carousel-card">
                     <div>
                       <p class="mb-3">“It’s been great working with Alexandra. Her calm, empathic approach created a trusting environment and her active listening skills made me feel heard.”</p>
-                      <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
+                      <p class="mb-0 text-primary"><strong>H.M., London, UK</strong></p>
                     </div>
                   </div>
 
                   <div class="testimonial-carousel-card">
                     <div>
                       <p class="mb-3">“These sessions help you realise you have all the tools and answers to achieve what you want in certain aspects of your life.”</p>
-                      <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
+                      <p class="mb-0 text-primary"><strong>A.P., London, UK</strong></p>
                     </div>
                   </div>
 
                   <div class="testimonial-carousel-card">
                     <div>
                       <p class="mb-3">“I have learnt so much about myself during our sessions and I would highly recommend them for anyone who is questioning their direction in life.”</p>
-                      <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
+                      <p class="mb-0 text-primary"><strong>M.R., London, UK</strong></p>
                     </div>
                   </div>
 
