--- a/index.html
+++ b/index.html
@@ -220,6 +220,54 @@
         </div> 
       </section> <!-- END space-cards-section -->
 
+      <!-- THREE NEW "SPACE TO" CARDS -->
+<section class="section-spacer space-cards-section">
+  <div class="container">
+    <div class="row col-spacing-30 align-items-start">
+
+      <!-- CARD 1 -->
+      <div class="col-lg-4 mb-4 mb-lg-0 text-center">
+        <h2 class="mb-3">A space to <i class="blue-font-color">reflect</i>.</h2>
+
+        <div class="content-card h-100">
+          <ul class="list-checks mb-0 text-left">
+            <li>Slow down and notice what’s present.</li>
+            <li>Clarify what you’re feeling and why.</li>
+            <li>Reconnect with what matters most.</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- CARD 2 -->
+      <div class="col-lg-4 mb-4 mb-lg-0 text-center">
+        <h2 class="mb-3">A space to <i class="blue-font-color">reframe</i>.</h2>
+
+        <div class="content-card h-100">
+          <ul class="list-checks mb-0 text-left">
+            <li>Shift perspective with gentle insight.</li>
+            <li>Challenge unhelpful stories and assumptions.</li>
+            <li>See new options with more ease.</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- CARD 3 -->
+      <div class="col-lg-4 mb-4 mb-lg-0 text-center">
+        <h2 class="mb-3">A space to <i class="blue-font-color">choose</i>.</h2>
+
+        <div class="content-card h-100">
+          <ul class="list-checks mb-0 text-left">
+            <li>Decide from values, not pressure.</li>
+            <li>Take small steps that build confidence.</li>
+            <li>Move forward with calm direction.</li>
+          </ul>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 
       <!-- TESTIMONIALS -->
 <section class="section-spacer testimonials-section">
