--- a/index.html
+++ b/index.html
@@ -227,39 +227,58 @@
 
       <!-- CARD 1 -->
       <div class="col-lg-4 mb-4 mb-lg-0 text-center">
-        <h2 class="mb-3">A space to <i class="blue-font-color">reflect</i>.</h2>
+        <h2 class="mb-3">A space to <i class="blue-font-color">think</i>.</h2>
+
+        
+              <img
+                src="assets/images/space-think.jpg"
+                alt="A space to think"
+                class="space-card-img"
+              >
 
         <div class="content-card h-100">
           <ul class="list-checks mb-0 text-left">
-            <li>Slow down and notice what’s present.</li>
-            <li>Clarify what you’re feeling and why.</li>
-            <li>Reconnect with what matters most.</li>
+            <li>Exploration and widening awareness.</li>
+            <li>Expanding perspective and possibility.</li>
+            <li>Gentle curiosity.</li>
           </ul>
         </div>
       </div>
 
       <!-- CARD 2 -->
       <div class="col-lg-4 mb-4 mb-lg-0 text-center">
-        <h2 class="mb-3">A space to <i class="blue-font-color">reframe</i>.</h2>
+        <h2 class="mb-3">A space to <i class="blue-font-color">understand</i>.</h2>
+
+              <img
+                src="assets/images/space-understand.jpg"
+                alt="A space to understand"
+                class="space-card-img"
+              >
 
         <div class="content-card h-100">
           <ul class="list-checks mb-0 text-left">
-            <li>Shift perspective with gentle insight.</li>
-            <li>Challenge unhelpful stories and assumptions.</li>
-            <li>See new options with more ease.</li>
+            <li>Seeing patterns clearly.</li>
+            <li>Making sense of what you’re experiencing.</li>
+            <li>Allowing insight to emerge.</li>
           </ul>
         </div>
       </div>
 
       <!-- CARD 3 -->
       <div class="col-lg-4 mb-4 mb-lg-0 text-center">
-        <h2 class="mb-3">A space to <i class="blue-font-color">choose</i>.</h2>
+        <h2 class="mb-3">A space to <i class="blue-font-color">become/i>.</h2>
+
+              <img
+                src="assets/images/space-become.jpg"
+                alt="A space to become"
+                class="space-card-img"
+              >
 
         <div class="content-card h-100">
           <ul class="list-checks mb-0 text-left">
-            <li>Decide from values, not pressure.</li>
-            <li>Take small steps that build confidence.</li>
-            <li>Move forward with calm direction.</li>
+            <li>Integrating insight.</li>
+            <li>Returning to what feels true.</li>
+            <li>Action shaped by values and priorities.</li>
           </ul>
         </div>
       </div>
