--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                     </div>
                     <div class="col-lg-5 mb-4 mb-lg-0 text-center">
                         <div class="card headshot-card">
-                            <img src="assets/images/Alex.jpeg" alt="Portrait of Alexandra, Transformative Coach and founder of noein" class="img-fluid rounded">
+                            <img src="assets/images/Alex.jpeg" alt="Portrait of Alexandra, Transformative Coach and founder of noein" class="about-portrait">
                         </div>
                     </div>
                 </div>
