--- a/about.html
+++ b/about.html
@@ -108,8 +108,7 @@
                         <div class="card headshot-card">
                             <img src="assets/images/Alex.jpeg"
      alt="Portrait of Alexandra, Transformative Coach and founder of noein"
-     class="about-portrait">
-
+     class="img-fluid about-portrait">
 
                         </div>
                     </div>
