--- a/about.html
+++ b/about.html
@@ -110,6 +110,10 @@
      alt="Portrait of Alexandra, Transformative Coach and founder of noein"
      class="img-fluid about-portrait">
 
+<img src="assets/images/alex-presenting.jpg"
+     alt="Alexandra presenting what coaching is"
+     class="img-fluid about-presenting">
+
                         </div>
                     </div>
                 </div>
