--- a/about.html
+++ b/about.html
@@ -114,6 +114,9 @@
      alt="Alexandra presenting what coaching is"
      class="img-fluid about-presenting">
 
+                            <p class="about-caption">Introducing coaching as a thinking space — how I work with teams and individuals.</p>
+
+
                         </div>
                     </div>
                 </div>
