--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
      alt="Alexandra presenting what coaching is"
      class="img-fluid about-presenting">
 
-                            <p class="about-caption">Introducing coaching as a thinking space — how I work with teams and individuals.</p>
+                            <p class="about-caption">Introducing coaching at work — nurturing a culture where people feel supported to grow.</p>
 
 
                         </div>
