--- a/about.html
+++ b/about.html
@@ -105,17 +105,28 @@
                         </div -->
                     </div>
                     <div class="col-lg-5 mb-4 mb-lg-0 text-center">
-                        <div class="card headshot-card">
-                            <img src="assets/images/Alex.jpeg"
-     alt="Portrait of Alexandra, Transformative Coach and founder of noein"
-     class="img-fluid about-portrait">
 
-<img src="assets/images/alex-presenting.jpg"
-     alt="Alexandra presenting what coaching is"
-     class="img-fluid about-presenting">
+                            <div class="about-image-stack">
 
-                            <p class="about-caption">Introducing coaching at work — nurturing a culture where people feel supported to grow.</p>
+  <!-- Portrait -->
+  <img 
+    src="assets/images/Alex.jpeg" 
+    alt="Portrait of Alexandra" 
+    class="about-image about-portrait"
+  >
 
+  <!-- Workplace photo -->
+  <img 
+    src="assets/alex-presenting.jpg" 
+    alt="Alexandra introducing coaching in the workplace" 
+    class="about-image about-work"
+  >
+
+  <p class="about-caption">
+    Introducing coaching in my workplace — nurturing a culture where people can learn and grow.
+  </p>
+
+</div>
 
                         </div>
                     </div>
