--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
 
   <!-- Workplace photo -->
   <img 
-    src="assets/alex-presenting.jpg" 
+    src="assets/images/workplace.jpg"
     alt="Alexandra introducing coaching in the workplace" 
     class="about-image about-work"
   >
