--- a/about.html
+++ b/about.html
@@ -140,7 +140,7 @@
 
         <section class="section-spacer">
             <div class="container">
-                <div class="row col-spacing-30 align-items-start">
+                <div class="row col-spacing-30 align-items-stretch equal-height-row">
 
                     <div class="col-lg-6">
                         <div class="content-card h-100">
